@WIP fix more rebase conflicts
tests pass but at least one is broken, TODO