@@ -6,15 +6,14 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.prlprg.fir.interpret.internal.Builtins.registerBuiltins;
 
 import com.google.common.collect.ImmutableList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.prlprg.fir.interpret.internal.InternalInterpreter;
 import org.prlprg.fir.ir.argument.Constant;
-import org.prlprg.fir.ir.argument.NamedArgument;
 import org.prlprg.fir.ir.argument.Read;
-import org.prlprg.fir.ir.binding.Parameter;
 import org.prlprg.fir.ir.callee.StaticFnCallee;
 import org.prlprg.fir.ir.expression.Call;
 import org.prlprg.fir.ir.expression.Load;
@@ -22,10 +21,10 @@ import org.prlprg.fir.ir.expression.Load.LoadType;
 import org.prlprg.fir.ir.expression.MkEnv;
 import org.prlprg.fir.ir.expression.MkEnv.MkEnvType;
 import org.prlprg.fir.ir.expression.MkVector;
+import org.prlprg.fir.ir.expression.Noop;
 import org.prlprg.fir.ir.expression.PopEnv;
 import org.prlprg.fir.ir.expression.Store;
 import org.prlprg.fir.ir.expression.Store.StoreType;
-import org.prlprg.fir.ir.expression.Noop;
 import org.prlprg.fir.ir.instruction.Jump;
 import org.prlprg.fir.ir.instruction.Return;
 import org.prlprg.fir.ir.instruction.Statement;
@@ -37,6 +36,7 @@ import org.prlprg.fir.ir.type.Signature;
 import org.prlprg.fir.ir.type.Type;
 import org.prlprg.fir.ir.value.Value;
 import org.prlprg.fir.ir.variable.FunctionParameter;
+import org.prlprg.fir.ir.variable.NamedVariable;
 import org.prlprg.fir.ir.variable.Variable;
 import org.prlprg.sexp.SEXPs;
 
@@ -127,8 +127,9 @@ class SimpleInternalInterpretTest {
     entry.appendStatement(new Statement(new MkEnv(MkEnvType.ELIDED)));
     entry.appendStatement(
         new Statement(
-            new Store(StoreType.LOCAL_VAR, Variable.named("x"), new Constant(SEXPs.integer(1)))));
-    entry.setJump(new Return(new Constant(SEXPs.integer(0))));
+            new Store(StoreType.LOCAL_VAR, Variable.named("x")),
+            List.of(new Constant(SEXPs.integer(1)))));
+    entry.setJump(new Jump(new Return(), List.of(new Constant(SEXPs.integer(0)))));
 
     assertThrows(InterpretException.class, () -> interpreter.call("test"));
   }
@@ -145,10 +146,11 @@ class SimpleInternalInterpretTest {
     version.setReturnType(Type.ANY_VALUE_SEXP);
 
     var entry = Objects.requireNonNull(version.cfg()).entry();
-    var r = version.addLocal("r", Type.ANY_VALUE_SEXP);
     entry.appendStatement(new Statement(new MkEnv(MkEnvType.ELIDED)));
-    entry.appendStatement(new Statement(r, new Load(LoadType.LOCAL_VAR, Variable.named("x"))));
-    entry.setJump(new Return(new Read(r)));
+    var loadStmt = new Statement(new Load(LoadType.LOCAL_VAR, Variable.named("x")));
+    entry.appendStatement(loadStmt);
+    var r = loadStmt.setAssignee("r", Type.ANY_VALUE_SEXP);
+    entry.setJump(new Jump(new Return(), List.of(new Read(r))));
 
     var result = interpreter.call("test");
 
@@ -167,40 +169,36 @@ class SimpleInternalInterpretTest {
     var innerV = inner.baseline();
     innerV.setReturnType(Type.ANY_VALUE_SEXP);
     var innerEntry = Objects.requireNonNull(innerV.cfg()).entry();
-    var vargs = innerV.addLocal("vargs", Type.DOTS);
-    var innerR = innerV.addLocal("r", Type.ANY_VALUE_SEXP);
-    innerEntry.appendStatement(
+    var vargsStmt =
         new Statement(
-            vargs,
-            new MkVector(
-                new Kind.Dots(),
-                ImmutableList.of(new NamedArgument(new Constant(SEXPs.integer(-1)))))));
+            new MkVector(new Kind.Dots(), Collections.<NamedVariable>singletonList(null)),
+            List.of(new Constant(SEXPs.integer(-1))));
+    innerEntry.appendStatement(vargsStmt);
+    var vargs = vargsStmt.setAssignee("vargs", Type.DOTS);
     var sysFrame = Objects.requireNonNull(module.lookupFunction(Variable.named("sys.frame")));
     var sysFrameSig =
         new Signature(ImmutableList.of(Type.DOTS), Type.ANY_VALUE_SEXP, Effects.REFLECT);
-    innerEntry.appendStatement(
+    var innerCallStmt =
         new Statement(
-            innerR,
-            new Call(
-                new StaticFnCallee(sysFrame, true, Constant.ELIDED_CLOSURE, sysFrameSig),
-                ImmutableList.of(new Read(vargs)))));
-    innerEntry.setJump(new Return(new Read(innerR)));
+            new Call(new StaticFnCallee(sysFrame, true, sysFrameSig)),
+            List.of(Constant.ELIDED_CLOSURE, new Read(vargs)));
+    innerEntry.appendStatement(innerCallStmt);
+    var innerR = innerCallStmt.setAssignee("r", Type.ANY_VALUE_SEXP);
+    innerEntry.setJump(new Jump(new Return(), List.of(new Read(innerR))));
 
     var main = module.addFunction(Variable.named("main"), List.of(), false);
     var mainV = main.baseline();
     mainV.setReturnType(Type.ANY_VALUE_SEXP);
     var mainEntry = Objects.requireNonNull(mainV.cfg()).entry();
-    var mainR = mainV.addLocal("r", Type.ANY_VALUE_SEXP);
     mainEntry.appendStatement(new Statement(new MkEnv(MkEnvType.REGULAR)));
     var innerSig = new Signature(ImmutableList.of(), Type.ANY_VALUE_SEXP, Effects.REFLECT);
-    mainEntry.appendStatement(
+    var mainCallStmt =
         new Statement(
-            mainR,
-            new Call(
-                new StaticFnCallee(inner, false, Constant.ELIDED_CLOSURE, innerSig),
-                ImmutableList.of())));
+            new Call(new StaticFnCallee(inner, false, innerSig)), List.of(Constant.ELIDED_CLOSURE));
+    mainEntry.appendStatement(mainCallStmt);
+    var mainR = mainCallStmt.setAssignee("r", Type.ANY_VALUE_SEXP);
     mainEntry.appendStatement(new Statement(new PopEnv()));
-    mainEntry.setJump(new Return(new Read(mainR)));
+    mainEntry.setJump(new Jump(new Return(), List.of(new Read(mainR))));
 
     interpreter.call("main");
 
